Openllet,DLEJena2/dlejena_v2.0/output_ApacheMavenSingleJar/SparqlQueryJevan1_compile.txt
examplesModifiedByJevan\SparqlQueryJevan1.java:4: error: package com.hp.hpl.jena.query does not exist
import com.hp.hpl.jena.query.Query;
                            ^
examplesModifiedByJevan\SparqlQueryJevan1.java:5: error: package com.hp.hpl.jena.query does not exist
import com.hp.hpl.jena.query.QueryExecution;
                            ^
examplesModifiedByJevan\SparqlQueryJevan1.java:6: error: package com.hp.hpl.jena.query does not exist
import com.hp.hpl.jena.query.QueryExecutionFactory;
                            ^
examplesModifiedByJevan\SparqlQueryJevan1.java:7: error: package com.hp.hpl.jena.query does not exist
import com.hp.hpl.jena.query.QueryFactory;
                            ^
examplesModifiedByJevan\SparqlQueryJevan1.java:8: error: package com.hp.hpl.jena.query does not exist
import com.hp.hpl.jena.query.ResultSet;
                            ^
examplesModifiedByJevan\SparqlQueryJevan1.java:9: error: package com.hp.hpl.jena.query does not exist
import com.hp.hpl.jena.query.QuerySolution; /* Jevan 2017sep */
                            ^
examplesModifiedByJevan\SparqlQueryJevan1.java:11: error: package dlejena does not exist
import dlejena.DLEJenaParameters;
              ^
examplesModifiedByJevan\SparqlQueryJevan1.java:12: error: package dlejena does not exist
import dlejena.DLEJenaReasoner;
              ^
examplesModifiedByJevan\SparqlQueryJevan1.java:40: error: cannot find symbol
        DLEJenaReasoner dle = new DLEJenaReasoner();
        ^
  symbol:   class DLEJenaReasoner
  location: class SparqlQueryJevan1
examplesModifiedByJevan\SparqlQueryJevan1.java:40: error: cannot find symbol
        DLEJenaReasoner dle = new DLEJenaReasoner();
                                  ^
  symbol:   class DLEJenaReasoner
  location: class SparqlQueryJevan1
examplesModifiedByJevan\SparqlQueryJevan1.java:71: error: cannot find symbol
        Query query = QueryFactory.create(queryString);
        ^
  symbol:   class Query
  location: class SparqlQueryJevan1
examplesModifiedByJevan\SparqlQueryJevan1.java:71: error: cannot find symbol
        Query query = QueryFactory.create(queryString);
                      ^
  symbol:   variable QueryFactory
  location: class SparqlQueryJevan1
examplesModifiedByJevan\SparqlQueryJevan1.java:72: error: cannot find symbol
        QueryExecution qexec = QueryExecutionFactory.create(query, abox);
        ^
  symbol:   class QueryExecution
  location: class SparqlQueryJevan1
examplesModifiedByJevan\SparqlQueryJevan1.java:72: error: cannot find symbol
        QueryExecution qexec = QueryExecutionFactory.create(query, abox);
                               ^
  symbol:   variable QueryExecutionFactory
  location: class SparqlQueryJevan1
examplesModifiedByJevan\SparqlQueryJevan1.java:76: error: cannot find symbol
        ResultSet results = qexec.execSelect();
        ^
  symbol:   class ResultSet
  location: class SparqlQueryJevan1
examplesModifiedByJevan\SparqlQueryJevan1.java:79: error: cannot find symbol
            QuerySolution soln = results.nextSolution() ; /* Jevan 2017sep */
            ^
  symbol:   class QuerySolution
  location: class SparqlQueryJevan1
16 errors
